--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>A .card selects all of the HTML elements on the page.</li>
         </ul>
       </section>
    
